.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
16:58:39 **** Clean-only build of configuration Debug for project HW4 ****
rm -rf src/hw411_test.o HW4.exe src/hw411_test.d 
16:59:02 **** Rebuild of configuration Debug for project HW4 ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -std=c++11 -o "src\\hw411_test.o" "..\\src\\hw411_test.cpp" 
g++ -o HW4.exe "src\\hw411_test.o" 
16:59:39 **** Incremental Build of configuration Debug for project HW4 ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -std=c++11 -o "src\\hw411_test.o" "..\\src\\hw411_test.cpp" 
g++ -o HW4.exe "src\\hw411_test.o" 
17:01:42 **** Incremental Build of configuration Debug for project HW4 ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -std=c++11 -o "src\\hw411_test.o" "..\\src\\hw411_test.cpp" 
g++ -o HW4.exe "src\\hw411_test.o" 
17:03:21 **** Incremental Build of configuration Debug for project HW4 ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -std=c++11 -o "src\\hw411_test.o" "..\\src\\hw411_test.cpp" 
g++ -o HW4.exe "src\\hw411_test.o" 
17:03:41 **** Incremental Build of configuration Debug for project HW4 ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -std=c++11 -o "src\\hw411_test.o" "..\\src\\hw411_test.cpp" 
In file included from ..\src\hw411_test.cpp:14:0:
..\src\hw411_binarytree.hpp: In member function 'bool gvsu::BinaryTree<Z>::is_element_of(gvsu::BinaryTree<Z>::Node*, const Z&) const':
..\src\hw411_binarytree.hpp:155:8: error: expected unqualified-id before 'bool'
   std::bool bol = false;
        ^
..\src\hw411_binarytree.hpp:155:8: error: expected ';' before 'bool'
..\src\hw411_binarytree.hpp:162:5: error: 'bol' was not declared in this scope
     bol = is_element_of(pos->right, key);
     ^
..\src\hw411_binarytree.hpp:163:23: error: 'bol' was not declared in this scope
    cout << "Bool " << bol << endl;
                       ^
..\src\hw411_binarytree.hpp:169:10: error: 'bol' was not declared in this scope
   return bol;
          ^
..\src\hw411_binarytree.hpp: In member function 'bool gvsu::BinaryTree<Z>::is_element_of(gvsu::BinaryTree<Z>::Node*, const Z&) const [with Z = std::basic_string<char>]':
..\src\hw411_binarytree.hpp:170:2: warning: control reaches end of non-void function [-Wreturn-type]
  }
  ^
17:04:03 **** Incremental Build of configuration Debug for project HW4 ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -std=c++11 -o "src\\hw411_test.o" "..\\src\\hw411_test.cpp" 
g++ -o HW4.exe "src\\hw411_test.o" 
17:07:26 **** Incremental Build of configuration Debug for project HW4 ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -std=c++11 -o "src\\hw411_test.o" "..\\src\\hw411_test.cpp" 
g++ -o HW4.exe "src\\hw411_test.o" 
17:08:26 **** Incremental Build of configuration Debug for project HW4 ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -std=c++11 -o "src\\hw411_test.o" "..\\src\\hw411_test.cpp" 
g++ -o HW4.exe "src\\hw411_test.o" 
17:09:11 **** Incremental Build of configuration Debug for project HW4 ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -std=c++11 -o "src\\hw411_test.o" "..\\src\\hw411_test.cpp" 
g++ -o HW4.exe "src\\hw411_test.o" 
17:13:05 **** Incremental Build of configuration Debug for project HW4 ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -std=c++11 -o "src\\hw411_test.o" "..\\src\\hw411_test.cpp" 
g++ -o HW4.exe "src\\hw411_test.o" 
